fix(dialog): fix dialog can't scroll if the content too large
fix dialog can't scroll if the content too large

fix #991

--- a/packages/theme-chalk/src/dialog.scss
+++ b/packages/theme-chalk/src/dialog.scss
@@ -12,6 +12,8 @@
   box-shadow: $--dialog-box-shadow;
   box-sizing: border-box;
   width: 50%;
+  max-height: 70%;
+  overflow-y: scroll;
 
   @include when(fullscreen) {
     width: 100%;
